--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>
+        fffff
+    </h1>
    <p>
        this is first paragraph.
    </p> 
+   <footer>
+        <p>this is footer </p>
+
+   </footer>
 </body>
 </html>
