--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>personal website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>
-        fffff
+        Fahim Mahbub
     </h1>
    <p>
        this is first paragraph.
    </p> 
    <footer>
         <p>this is footer </p>
-
    </footer>
 </body>
 </html>
