--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <p> this is header</p>
+    </header>
     <h1>
         Fahim Mahbub
     </h1>
