--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>personal website</title>
+    <title>Fahim Web developer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <p> this is header</p>
-    </header>
-    <h1>
-        Fahim Mahbub
-    </h1>
-   <p>
-       this is first paragraph.
-   </p> 
-   <footer>
-        <p>this is footer </p>
-   </footer>
+ 
+    <h1> Welcome To  </h1>
+    <h1> <span> Fahim Mahbub </span> Fahim Mahbub Website</h1>
+
 </body>
 </html>
