--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
  
     <h1> Welcome To  </h1>
-    <h1> <span> Fahim Mahbub </span> Fahim Mahbub Website</h1>
+    <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
 
 </body>
 </html>
