--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
- 
-    <h1> Welcome To  </h1>
-    <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
+ <section>
+    <div class="half-width">
+        <h1> Welcome To  </h1>
+        <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
+        <h3> World class Professional  Web developer</h3>
+         <p>This is Fahim a web developer focused on coding. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
+    </div>
+  
 
+     <div class="half-width">
+        <img src="image/jhankar.png" alt="">
+     </div>
+
+
+ </section>
+    
 </body>
 </html>
