--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
- <section>
+ <section class="top-banner">
     <div class="half-width">
         <h1> Welcome To  </h1>
         <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
