--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="half-width">
         <h1> Welcome To  </h1>
         <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
-        <h3> World class Professional  Web developer</h3>
+        <h3> Professional  Web developer</h3>
          <p>This is Fahim a web developer focused on coding. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
     </div>
   
