--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 
      <div class="half-width">
-        <img src="image/jhankar.png" alt="">
+        <img src="image/fahim.png" alt="">
      </div>
 
 
