--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
         <h3> Professional  Web developer</h3>
          <p>This is Fahim a web developer focused on coding. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
-    <a class="link-button" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Hire Me</a>
+        <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Hire Me</a>
     </div>
   
 
