--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
         <div class="half-width">
             <img src="image/fahim.png" alt="">
         </div>
+    </section>
 
+
+    <section calss="dream-banner">
+        <div class="half-width">
+            <img src="image/fahim.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h2>Big Deam</h2>
+            <h3>Become world class developer </h3>
+            <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
+            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Dwonload Resume</a>
+
+        </div>
 
     </section>
     
