--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1> Welcome To  </h1>
-            <h1> <span class="name-heighlight"> Fahim Mahbub </span> Website</h1>
+            <h1> <span class="orange-heighlight"> Fahim Mahbub </span> Website</h1>
             <h3> Professional  Web developer</h3>
             <p>This is Fahim a web developer focused on coding. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
             <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Hire Me</a>
@@ -40,6 +40,20 @@
 
         </div>
 
+    </section>
+
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="half-width">
+            <h2>Full stack web Developer</h2>
+            <h3 class="orange-heighlight">2021-Present | Pro Level Developer</h3>
+            <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="half-width"> 
+        <h2>Aemature Web Developer</h2>
+        <h3 class="orange-heighlight">2020-2021 | Learner</h3>
+         <p>They didn't offer me a job. But I made myself as a  web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at web development area. </p>  
+        </div>
     </section>
     
 </body>
