--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1> Welcome To  </h1>
             <h1> <span class="orange-heighlight"> Fahim Mahbub </span> Website</h1>
             <h3> Professional  Web developer</h3>
-            <p>This is Fahim a web developer focused on coding. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
+            <p>This is Fahim a web developer focused on developing website. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
             <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Hire Me</a>
         </div>
     
@@ -34,9 +34,9 @@
 
         <div class="half-width">
             <h2>Big Deam</h2>
-            <h3>Become world class developer </h3>
+            <h3>Become world class web developer </h3>
             <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
-            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Dwonload Resume</a>
+            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Download Resume</a>
 
         </div>
 
@@ -44,12 +44,12 @@
 
     <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width">
+        <div class="half-width single-experience">
             <h2>Full stack web Developer</h2>
             <h3 class="orange-heighlight">2021-Present | Pro Level Developer</h3>
             <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div class="half-width"> 
+        <div class="half-width single-experience"> 
         <h2>Aemature Web Developer</h2>
         <h3 class="orange-heighlight">2020-2021 | Learner</h3>
          <p>They didn't offer me a job. But I made myself as a  web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at web development area. </p>  
