--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
 
     <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width single-experience">
+        <div id="full-stack" class="half-width single-experience">
             <h2>Full stack web Developer</h2>
             <h3 class="orange-heighlight">2021-Present | Pro Level Developer</h3>
             <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
-        <div class="half-width single-experience"> 
+        <div id="child-stack" class="half-width single-experience"> 
         <h2>Aemature Web Developer</h2>
         <h3 class="orange-heighlight">2020-2021 | Learner</h3>
          <p>They didn't offer me a job. But I made myself as a  web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at web development area. </p>  
         </div>
     </section>
+
+    <footer>
+        <p>© Fahim 2021, All rights reserved.</p>
+
+    </footer>
     
 </body>
 </html>
