--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fahim Web developer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- <p> top section</p> -->
     <section class="top-banner">
         <div class="half-width">
             <h1> Welcome To  </h1>
             <h1> <span class="orange-heighlight"> Fahim Mahbub </span> Website</h1>
             <h3> Professional  Web developer</h3>
             <p>This is Fahim a web developer focused on developing website. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
-            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Hire Me</a>
+            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/" title="Hire me">Hire Me</a>
         </div>
     
 
@@ -36,7 +38,7 @@
             <h2>Big Deam</h2>
             <h3>Become world class web developer </h3>
             <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
-            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/">Download Resume</a>
+            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/" title="Download resume">Download Resume</a>
 
         </div>
 
@@ -55,7 +57,7 @@
          <p>They didn't offer me a job. But I made myself as a  web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at web development area. </p>  
         </div>
     </section>
-
+    <!-- <p>footer section</p> -->
     <footer>
         <p>© Fahim 2021, All rights reserved.</p>
 
