--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="half-width">
-            <h2>Big Deam</h2>
+            <h2>Big Dream</h2>
             <h3>Become world class web developer </h3>
             <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
             <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/" title="Download resume">Download Resume</a>
