--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <section class="top-banner">
         <div class="half-width">
             <h1> Welcome To  </h1>
-            <h1> <span class="orange-heighlight"> Fahim Mahbub </span> Website</h1>
+            <h1> <span class="orange-heighlight"> Mohammad Mahbubur Rahman(Fahim) </span> Website</h1>
             <h3> Professional  Web developer</h3>
             <p>This is Fahim a web developer focused on developing website. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
-            <a class="link" target="_blank"  href="https://www.linkedin.com/in/mohammad-mahbubur-rahman-935989b3//" title="Hire me">Linkdin Profile</a>
+            <a class="link" target="_blank"  href="https://www.linkedin.com/in/mohammad-mahbubur-rahman-935989b3//" title="Hire me">Linkedin Profile</a>
         </div>
     
 
