--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>Big Dream</h2>
             <h3>Become world class web developer </h3>
             <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
-            <a class="link" target="_blank"  href="https://www.linkedin.com/in/fahim-mahbub-935989b3/" title="Download resume">Download Resume</a>
+            <a class="link" target="_blank"  href="https://drive.google.com/file/d/1ug9_svz4yS6dcEbB-7XPl5f4GqLeT4AR/view?usp=sharing" title="View resume">Download Resume</a>
 
         </div>
 
