--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1> Welcome To  </h1>
             <h1> <span class="orange-heighlight"> Mohammad Mahbubur Rahman(Fahim) </span> Website</h1>
             <h3> Professional  Web developer</h3>
-            <p>This is Fahim a web developer focused on developing website. Designing and Coding have been my passion since the days I started working with computers . I enjoy developing website</p>
+            <p>This is Fahim a web developer focused on developing web Application. Coding and Problem solving have been my passion since the days I started working with computers . I enjoy developing application</p>
             <a class="link" target="_blank"  href="https://www.linkedin.com/in/mohammad-mahbubur-rahman-935989b3//" title="Hire me">Linkedin Profile</a>
         </div>
     
@@ -37,7 +37,9 @@
         <div class="half-width">
             <h2>Big Dream</h2>
             <h3>Become world class web developer </h3>
-            <p>I have already learnerd html & css. I can build any smimple website. My goal is to build 3 website and advanced topics.  </p>
+            <p>To Work with Maximum Potential in a challenging and friendly environment that will give me a platform to utilize my technical skill 
+                and experience to add valuable assets to the organization and enrich my knowledge as the career grows. 
+                I have skills in Web Development, Programming, and different databases.  </p>
             <a class="link" target="_blank"  href="https://drive.google.com/file/d/1ug9_svz4yS6dcEbB-7XPl5f4GqLeT4AR/view?usp=sharing" title="View resume">Download Resume</a>
 
         </div>
@@ -48,18 +50,20 @@
         <h2>Experiences</h2>
         <div id="full-stack" class="half-width single-experience">
             <h2>Full stack web Developer</h2>
-            <h3 class="orange-heighlight">2021-Present | Pro Level Developer</h3>
-            <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <h3 class="orange-heighlight">2019-Present | Mid Level Developer</h3>
+            <p> I am the master of Laravel , PHP, Javascript. I know everything needed to make a web application  efficient.
+                I didn't stop with the web. I went beyond with most popular Javascript framework called React JS.
+                I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div id="child-stack" class="half-width single-experience"> 
         <h2>Aemature Web Developer</h2>
-        <h3 class="orange-heighlight">2020-2021 | Learner</h3>
-         <p>They didn't offer me a job. But I made myself as a  web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at web development area. </p>  
+        <h3 class="orange-heighlight">2016-2018 | Learner</h3>
+         <p> It was fun working at web development area. </p>  
         </div>
     </section>
     <!-- <p>footer section</p> -->
     <footer>
-        <p>© Fahim 2021, All rights reserved.</p>
+        <p>© Fahim 2022, All rights reserved.</p>
 
     </footer>
     
