--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <div class="half-width">
             <h2>Big Dream</h2>
             <h3>Become world class web developer </h3>
-            <p>To Work with Maximum Potential in a challenging and friendly environment that will give me a platform to utilize my technical skill 
-                and experience to add valuable assets to the organization and enrich my knowledge as the career grows. 
-                I have skills in Web Development, Programming, and different databases.  </p>
+            <p>To Work with Maximum Potential in a challenging and friendly environment that will give me a platform to utilize my technical skill and experience to add valuable assets to the organization and enrich my knowledge as the career grows. I have skills in Web Development, Programming, and different databases.  </p>
             <a class="link" target="_blank"  href="https://drive.google.com/file/d/1ug9_svz4yS6dcEbB-7XPl5f4GqLeT4AR/view?usp=sharing" title="View resume">Download Resume</a>
 
         </div>
@@ -51,9 +49,7 @@
         <div id="full-stack" class="half-width single-experience">
             <h2>Full stack web Developer</h2>
             <h3 class="orange-heighlight">2019-Present | Mid Level Developer</h3>
-            <p> I am the master of Laravel , PHP, Javascript. I know everything needed to make a web application  efficient.
-                I didn't stop with the web. I went beyond with most popular Javascript framework called React JS.
-                I even know the deployment, server and security. I will give you 100% web solution.</p>
+            <p> I am the master of Laravel , PHP, Javascript. I know everything needed to make a web application  efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called React JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
         </div>
         <div id="child-stack" class="half-width single-experience"> 
         <h2>Aemature Web Developer</h2>
