--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1> Welcome To  </h1>
-            <h1> <span class="orange-heighlight"> Mohammad Mahbubur Rahman(Fahim) </span> Website</h1>
+            <h1> <span class="orange-heighlight"> Md. Mahbubur Rahman(Fahim) </span> Website</h1>
             <h3> Professional  Web developer</h3>
             <p>This is Fahim a web developer focused on developing web Application. Coding and Problem solving have been my passion since the days I started working with computers . I enjoy developing application</p>
             <a class="link" target="_blank"  href="https://www.linkedin.com/in/mohammad-mahbubur-rahman-935989b3//" title="Hire me">Linkedin Profile</a>
